--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ asgiref==3.3.1
 astroid==2.4.2
 async-timeout==3.0.1
 attrs==20.3.0
-autobahn==21.2.1
 Automat==20.2.0
 certifi==2020.12.5
 cffi==1.14.5
@@ -16,8 +15,10 @@ crispy-forms-gds==0.2.2
 cryptography==3.4.7
 daphne==3.0.1
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-heroku==0.3.1
 djongo==1.3.4
 dnspython==2.1.0
 filelock==3.0.12
@@ -33,6 +34,7 @@ msgpack==1.0.2
 p==0.0.0
 Pillow==8.2.0
 pipenv==2020.11.15
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -49,5 +51,6 @@ twisted-iocpsupport==1.0.1
 txaio==21.2.1
 virtualenv==20.4.3
 virtualenv-clone==0.5.4
+whitenoise==5.2.0
 wrapt==1.12.1
 zope.interface==5.3.0
